--- a/index.html
+++ b/index.html
@@ -11,48 +11,59 @@
   <main>
     <h1>Drumkit</h1>
     <div class="keys">
-      <div class="key">
+      <div class="key" data-key="65">
         <kbd>A</kbd>
         <span class="sound">Kick</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="90">
         <kbd>Z</kbd>
         <span class="sound">Clap</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="69">
         <kbd>E</kbd>
         <span class="sound">Snare</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="82">
         <kbd>R</kbd>
         <span class="sound">Rim</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="84">
         <kbd>T</kbd>
         <span class="sound">Hi-Hat Closed</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="89">
         <kbd>Y</kbd>
         <span class="sound">Hi-Hat Open</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="85">
         <kbd>U</kbd>
         <span class="sound">Crash</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="73">
         <kbd>I</kbd>
         <span class="sound">Ride</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="79">
         <kbd>O</kbd>
         <span class="sound">Shaker</span>
       </div>
-      <div class="key">
+      <div class="key" data-key="80">
         <kbd>P</kbd>
-        <span class="sound">Tambourine</span>
+        <span class="sound">Tom</span>
       </div>
     </div>
   </main>
+
+  <audio data-key="65" src="/sounds/kick.wav"></audio>
+  <audio data-key="90" src="/sounds/clap.wav"></audio>
+  <audio data-key="69" src="/sounds/snare.wav"></audio>
+  <audio data-key="82" src="/sounds/rim.WAV"></audio>
+  <audio data-key="84" src="/sounds/hi-hat-closed.wav"></audio>
+  <audio data-key="89" src="/sounds/hi-hat-open.wav"></audio>
+  <audio data-key="85" src="/sounds/crash.wav"></audio>
+  <audio data-key="73" src="/sounds/ride.wav"></audio>
+  <audio data-key="79" src="/sounds/shaker.wav"></audio>
+  <audio data-key="80" src="/sounds/tom.WAV"></audio>
 
   <!-- JS -->
   <script src="/js/app.js"></script>
