--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       </div>
       <div class="key" data-key="73">
         <kbd>I</kbd>
-        <span class="sound">Ride</span>
+        <span class="sound">Pad A</span>
       </div>
       <div class="key" data-key="79">
         <kbd>O</kbd>
-        <span class="sound">Shaker</span>
+        <span class="sound">Pad B</span>
       </div>
       <div class="key" data-key="80">
         <kbd>P</kbd>
-        <span class="sound">Tom</span>
+        <span class="sound">Pad C</span>
       </div>
     </div>
   </main>
@@ -61,9 +61,9 @@
   <audio data-key="84" src="/sounds/hi-hat-closed.wav"></audio>
   <audio data-key="89" src="/sounds/hi-hat-open.wav"></audio>
   <audio data-key="85" src="/sounds/crash.wav"></audio>
-  <audio data-key="73" src="/sounds/ride.wav"></audio>
-  <audio data-key="79" src="/sounds/shaker.wav"></audio>
-  <audio data-key="80" src="/sounds/tom.WAV"></audio>
+  <audio data-key="73" src="/sounds/pad1.wav"></audio>
+  <audio data-key="79" src="/sounds/pad2.wav"></audio>
+  <audio data-key="80" src="/sounds/pad3.wav"></audio>
 
   <!-- JS -->
   <script src="/js/app.js"></script>
