--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 		<audio data-key="79" src="/sounds/pad2.wav"></audio>
 		<audio data-key="80" src="/sounds/pad3.wav"></audio>
 
+		<footer>
+			<p>Coded & designed <a href="https://github.com/Ka-be" target="_blank">Kevin Bourgitteau</a></p>
+		</footer>
+
 		<!-- JS -->
 		<script src="/js/app.js"></script>
 	</body>
