add sound icons and title + Add parameters for responsive

--- a/index.html
+++ b/index.html
@@ -13,43 +13,53 @@
 			<div class="keys">
 				<div class="key" data-key="65">
 					<kbd>A</kbd>
-					<span class="sound">Kick</span>
+					<img src="/images/Kick.svg" alt="Kick" class="sound-icon">
+					<span class="sound-title">Kick</span>
 				</div>
 				<div class="key" data-key="90">
 					<kbd>Z</kbd>
-					<span class="sound">Clap</span>
+					<img src="/images/Clap.svg" alt="Clap" class="sound-icon">
+					<span class="sound-title">Clap</span>
 				</div>
 				<div class="key" data-key="69">
 					<kbd>E</kbd>
-					<span class="sound">Snare</span>
+					<img src="/images/Snare.svg" alt="Snare" class="sound-icon">
+					<span class="sound-title">Snare</span>
 				</div>
 				<div class="key" data-key="82">
 					<kbd>R</kbd>
-					<span class="sound">Rim</span>
+					<img src="/images/Rim.svg" alt="Rim" class="sound-icon">
+					<span class="sound-title">Rim</span>
 				</div>
 				<div class="key" data-key="84">
 					<kbd>T</kbd>
-					<span class="sound">Hi-Hat Closed</span>
+					<img src="/images/HH_Closed.svg" alt="Hi-Hat Closed" class="sound-icon">
+					<span class="sound-title">Hi-hat closed</span>
 				</div>
 				<div class="key" data-key="89">
 					<kbd>Y</kbd>
-					<span class="sound">Hi-Hat Open</span>
+					<img src="/images/HH_Open.svg" alt="Hi-hat open" class="sound-icon">
+					<span class="sound-title">Hi-hat open</span>
 				</div>
 				<div class="key" data-key="85">
 					<kbd>U</kbd>
-					<span class="sound">Crash</span>
+					<img src="/images/Crash.svg" alt="Crash" class="sound-icon">
+					<span class="sound-title">Crash</span>
 				</div>
 				<div class="key" data-key="73">
 					<kbd>I</kbd>
-					<span class="sound">Pad A</span>
+					<img src="/images/Chord.svg" alt="Chords" class="sound-icon">
+					<span class="sound-title">Chords A</span>
 				</div>
 				<div class="key" data-key="79">
 					<kbd>O</kbd>
-					<span class="sound">Pad B</span>
+					<img src="/images/Chord.svg" alt="Chords" class="sound-icon">
+					<span class="sound-title">Chords B</span>
 				</div>
 				<div class="key" data-key="80">
 					<kbd>P</kbd>
-					<span class="sound">Pad C</span>
+					<img src="/images/Chord.svg" alt="Chords" class="sound-icon">
+					<span class="sound-title">Chords C</span>
 				</div>
 			</div>
 		</main>
@@ -66,7 +76,7 @@
 		<audio data-key="80" src="/sounds/pad3.wav"></audio>
 
 		<footer>
-			<p>Coded & designed <a href="https://github.com/Ka-be" target="_blank">Kevin Bourgitteau</a></p>
+			<p>Coded & designed by <a href="https://github.com/Ka-be" target="_blank">Kevin Bourgitteau</a></p>
 		</footer>
 
 		<!-- JS -->
