--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles/style.css" />
+
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/Favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/Favicon/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+
 		<title>KHORD - A Tiny JS Drumkit</title>
 	</head>
 	<body>
